2007-03-28  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala: declare HashFunc and EqualFunc as callback
	  functions, patch by David Keijser

2007-03-25  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/vte.vala, vapi/vte.deps: add vte binding
	* vapi/Makefile.am: update

2007-03-24  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valaforstatement.vala: assign parent_node to children of this
	  statement; include iterator and initializer in replacement of a child
	  node (fixes segfault using prefix increment expression in the
	  iterator of a for-statement)

2007-03-22  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valaflags.vala, vala/valaenum.vala, vala/valadatatype.vala,
	  vala/valastruct.vala: add support for default values of types
	* vala/valacodegenerator.vala: use default values for initialization
	* vapi/glib-2.0.vala: add default values for common types

2007-03-22  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-03-22  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.8 release
	* tests/Makefile.am: update

2007-03-22  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valacodegenerator.vala: fix generation of unresolvable 'memset'
	  for classes without strings.

2007-03-21  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/pango.vala: add Pango.Cairo and Pango.CairoFontMap
	* vapi/pango.deps: add cairo dependency
	* vapi/Makefile.am: update

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: fix properties with interface types
	* vala/valamemorymanager.vala: fix memory management when storing array
	  elements
	* vala/valaconstant.vala: obey overridden cprefix in namespaces
	* vapi/config.vala: override lower_case_cprefix of namespace

2007-03-21  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valaconstant.vala: add '_' between namespace and name of
	  namespace constants' cname

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: minor output enhancements