@@ -1,3 +1,7 @@
+2007-04-03  Jürg Billeter  <j@bitron.ch>
+
+	* vapi/glib-2.0.vala: extend unicode support, add GRegex
+
 2007-03-28  Raffaele Sandrini  <rasa@gmx.ch>
 
 	* vapi/glib-2.0.vala: declare HashFunc and EqualFunc as callback
